May 30 2003  2.9.1  Fixed gpsmap -Z blowing up if no parameter given.
May 27 2003  2.9.1  Fixed ssid len=32 management packets being flagged as noise
                    Defined new channel hopping config file format (subject to
                     change during implementation)
May 24 2003  2.9.1  Removed sequence spoof detector (for now) since it didn't
                     do much useful
                    Added disassociate/deauth spoof detector
                    Documented other alerts
May 23 2003  2.9.1  Added drone server-side flush/resync
                    Added pcap and prism2_legacy engine channel control
                    Fixed makefile running checkconfig twice and
                     checkdroneconfig never.
                    File reorganization.
May 22 2003  2.9.1  Absorbed kismet_monitor into kismet_server, changed suid
                     root behavior.  READ THE DOCS.
May 21 2003  2.9.1  First major rewrite to the packet path.  kismet_monitor
                     and kismet_hopper are still required.  See blog entry 
                     for more details.
                    Fixed flaw in alert protocol preventing the client from
                     reporting alerts at all.
                    Merged WSP100 keepalive patch from Chris Waters
May 18 2003  2.9.1  Added -fno-stack-prot to openbsd cflags
                    Fixed various DTD bits out of whack, uploaded devel DTDs
May 13 2003  2.9.1  Removed inline from packetracker MatchNetwork to make 
                     gcc-2.95.x play nice again (thanks Alexis)
May 08 2003  2.9.1  Updated configure to look for ethereal 0.9.12
May 01 2003  2.9.1  Integrated FSA alerts with packetracker code.
                    Internal changes to packetracker api
Apr 29 2003  2.9.1  First iteration of stateful packet inspection added - 
                     detection of probe-only clients who never join a network
Apr 24 2003  2.9.1  Tweaked cisco_cvs monitor scripts